--- a/AllenEcommerceBlazorApp/Server/appsettings.json
+++ b/AllenEcommerceBlazorApp/Server/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BlazorAppConnectionString": "Server=localhost;Database=AllenBlazorApp;User=sa;Password={Aakosi@lleN123!};"
+  }
 }
 
