--- a/AllenEcommerceBlazorApp/Client/AllenEcommerceBlazorApp.Client.csproj
+++ b/AllenEcommerceBlazorApp/Client/AllenEcommerceBlazorApp.Client.csproj
@@ -18,4 +18,12 @@
     <ProjectReference Include="..\Shared\AllenEcommerceBlazorApp.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Services\" />
+    <None Remove="Services\ProductServices\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="Services\ProductServices\" />
+  </ItemGroup>
 </Project>
