--- a/AllenEcommerceBlazorApp/Client/AllenEcommerceBlazorApp.Client.csproj
+++ b/AllenEcommerceBlazorApp/Client/AllenEcommerceBlazorApp.Client.csproj
@@ -21,9 +21,11 @@
   <ItemGroup>
     <None Remove="Services\" />
     <None Remove="Services\ProductServices\" />
+    <None Remove="Services\CategoryService\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="Services\ProductServices\" />
+    <Folder Include="Services\CategoryService\" />
   </ItemGroup>
 </Project>
