--- a/AllenEcommerceBlazorApp/Server/AllenEcommerceBlazorApp.Server.csproj
+++ b/AllenEcommerceBlazorApp/Server/AllenEcommerceBlazorApp.Server.csproj
@@ -31,10 +31,12 @@
     <None Remove="Data\" />
     <None Remove="Services\" />
     <None Remove="Services\ProductServices\" />
+    <None Remove="Services\CategoryService\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Services\" />
     <Folder Include="Services\ProductServices\" />
+    <Folder Include="Services\CategoryService\" />
   </ItemGroup>
 </Project>
