--- a/AllenEcommerceBlazorApp/Server/AllenEcommerceBlazorApp.Server.csproj
+++ b/AllenEcommerceBlazorApp/Server/AllenEcommerceBlazorApp.Server.csproj
@@ -32,11 +32,13 @@
     <None Remove="Services\" />
     <None Remove="Services\ProductServices\" />
     <None Remove="Services\CategoryService\" />
+    <None Remove="Services\CartService\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Services\" />
     <Folder Include="Services\ProductServices\" />
     <Folder Include="Services\CategoryService\" />
+    <Folder Include="Services\CartService\" />
   </ItemGroup>
 </Project>
