Backend Jwt and Auth
implementing the JWT token and Auth on the backend or server-side

--- a/AllenEcommerceBlazorApp/Server/appsettings.json
+++ b/AllenEcommerceBlazorApp/Server/appsettings.json
@@ -8,6 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BlazorAppConnectionString": "Server=localhost;Database=AllenBlazorApp;User=sa;Password={Aakosi@lleN123!};"
+  },
+  "AppSettings": {
+    "Token": "my top secret key"
+    }
   }
-}
 
