--- a/AllenEcommerceBlazorApp/Client/AllenEcommerceBlazorApp.Client.csproj
+++ b/AllenEcommerceBlazorApp/Client/AllenEcommerceBlazorApp.Client.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.9" PrivateAssets="all" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +29,7 @@
     <None Remove="Services\CartService\" />
     <None Remove="Services\AuthService\" />
     <None Remove="Microsoft.AspNetCore.Components.Authorization" />
+    <None Remove="Microsoft.AspNetCore.WebUtilities" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
