--- a/AllenEcommerceBlazorApp/Server/AllenEcommerceBlazorApp.Server.csproj
+++ b/AllenEcommerceBlazorApp/Server/AllenEcommerceBlazorApp.Server.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +35,7 @@
     <None Remove="Services\CategoryService\" />
     <None Remove="Services\CartService\" />
     <None Remove="Services\AuthService\" />
+    <None Remove="Microsoft.AspNetCore.Authentication.JwtBearer" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
