--- a/AllenEcommerceBlazorApp/Client/AllenEcommerceBlazorApp.Client.csproj
+++ b/AllenEcommerceBlazorApp/Client/AllenEcommerceBlazorApp.Client.csproj
@@ -30,6 +30,7 @@
     <None Remove="Services\AuthService\" />
     <None Remove="Microsoft.AspNetCore.Components.Authorization" />
     <None Remove="Microsoft.AspNetCore.WebUtilities" />
+    <None Remove="Services\OrderService\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
@@ -37,5 +38,6 @@
     <Folder Include="Services\CategoryService\" />
     <Folder Include="Services\CartService\" />
     <Folder Include="Services\AuthService\" />
+    <Folder Include="Services\OrderService\" />
   </ItemGroup>
 </Project>
