ProductType admin implementation
ProductType admin implementation

--- a/AllenEcommerceBlazorApp/Client/AllenEcommerceBlazorApp.Client.csproj
+++ b/AllenEcommerceBlazorApp/Client/AllenEcommerceBlazorApp.Client.csproj
@@ -33,6 +33,7 @@
     <None Remove="Services\OrderService\" />
     <None Remove="Services\AddressService\" />
     <None Remove="Pages\Admin\" />
+    <None Remove="Services\ProductTypeService\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
@@ -43,5 +44,6 @@
     <Folder Include="Services\OrderService\" />
     <Folder Include="Services\AddressService\" />
     <Folder Include="Pages\Admin\" />
+    <Folder Include="Services\ProductTypeService\" />
   </ItemGroup>
 </Project>
